force-app/main/default/objects/AAR_IP_Disclosure__c/AAR_IP_Disclosure__c.object-meta.xml
<CustomObject>
    <label>IP Disclosure</label>
    <nameField>
        <displayFormat>IPD-{0000}</displayFormat>
        <label>Disclosure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IP Disclosures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>