force-app/main/default/objects/AAR_IP_Disclosure__c/fields/AAR_Record__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record__c</fullName>
    <label>AAR Record</label>
    <referenceTo>UHN_AAR__c</referenceTo>
    <relationshipLabel>IP Disclosures</relationshipLabel>
    <relationshipName>IP_Disclosures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>