force-app/main/default/objects/AAR_IP_Disclosure__c/fields/Disclosure_Date__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Date__c</fullName>
    <label>Disclosure Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>