force-app/main/default/objects/AAR_IP_Disclosure__c/fields/Disclosure_Status_TDC__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Status_TDC__c</fullName>
    <label>Disclosure Status (TDC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Under Review</fullName><default
        >false</default><label>Under Review</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label
        >Accepted</label></value>
            <value><fullName>Declined</fullName><default>false</default><label
        >Declined</label></value>
            <value><fullName>Patent Filed</fullName><default
        >false</default><label>Patent Filed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>