force-app/main/default/objects/AAR_IP_Disclosure__c/fields/Inventors__c.field-meta.xml
<CustomField>
    <fullName>Inventors__c</fullName>
    <label>Inventors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>